comment section added our partner just title added

--- a/home.html
+++ b/home.html
@@ -16,8 +16,9 @@
         --bg:#efe9e3;
         --nc:#e7e2dc;
       }
-      .fakeimg{
-
+      @font-face {
+        font-family: new;
+        src: url();
       }
     </style>
 </head>
@@ -71,7 +72,7 @@
           </center>
         </div>
         <!-- cards with svg -->
-     <div class="row  mx-3 py-4">
+     <div class="row pb-5 mx-3 py-4">
        <div class="col-sm-1"></div>
          <div class="col-md-5 me-md-4 mt-5">
            <div class="card border-primary mt-5" style="
@@ -139,9 +140,96 @@
        <div class="col-sm-1"></div>
 
         </div>
+        <!-- Tree Title  -->
+        <div class="container-5 ">
+        <div class="row mt-5 justify-content-evenly">
+          <div class="col-md-3">
+            <center>
+              <h2 class="fs-1">Empowering <br>tools</h2>
+                <p>for personal and business life.</p>
+              </center>
+          </div>
+          <div class="col-md-3">
+            <center>
+            <h2 class="fs-1">Greater job<br>opportunities</h2>
+              <p>with in demand skills.</p>
+            </center>
+          </div>
+          <div class="col-md-3">
+            <center>
+              <h2 class="fs-1">Designing<br>tools</h2>
+                <p>for web Development</p>
+              </center>
+          </div>
+         </div>
+        </div>
+        <!-- Studen Testimonials -->
+        <div class="container my-5 py-5">
+          <center>
+           <h1 class="text-primary display-3 fw-bold text-uppercase">student <span class="bg-primary p-md-2 text-light">testimonials</span></h1>
+          </center>
+        </div>
       </div>
     </div>
-    <!-- section tree -->
+    <!-- student comment -->
+    <div class="row text-primary justify-content-center pb-5 px-5" style="background-color: var(--bg);">
+      <div class="col-md-4  my-2">
+        <div class="card" style="box-shadow:2px 2px 12px cornflowerblue ; border: 1px solid cornflowerblue; border-radius: 12px;">
+          <div class="row my-4 justify-content-center">
+            <div class="col mx-1 align-items-center align-self-center">
+              <img class="card-img-top position-rlative px-3" src="img/home/te1.png" style="" alt="Title">
+            </div>
+            <div class="col-lg px-3 pe-5">
+                <h1 class="card-title fw-bold">Abdul Jalal <h2 class="bg-primary text-light px-1">Student</h2></h1>
+            </div>
+          </div>
+          <div class="card-body mb-4">
+            <p class="card-text h6 text-uppercase">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit.lorem with the web Exercitationem, assumenda?</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 my-2">
+        <div class="card" style="box-shadow:2px 2px 12px cornflowerblue ; border: 1px solid cornflowerblue; border-radius: 12px;">
+          <div class="row my-4 justify-content-center">
+            <div class="col mx-1 align-items-center align-self-center">
+              <img class="card-img-top position-rlative px-3" src="img/home/te2.png" alt="Title">
+            </div>
+            <div class="col-lg px-3 pe-5">
+                <h1 class="card-title fw-bold">Fatema Qazizada  <h2 class="bg-primary text-light px-1">Entrepreneur</h2></h1>
+            </div>
+          </div>
+          <div class="card-body mb-4">
+            <p class="card-text h6 text-uppercase">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit.lorem with the web Exercitationem, assumenda?</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4  my-2">
+        <div class="card" style="box-shadow:2px 2px 12px cornflowerblue ; border: 1px solid cornflowerblue; border-radius: 12px;">
+          <div class="row my-4 justify-content-center">
+            <div class="col mx-1 align-items-center align-self-center">
+              <img class="card-img-top position-rlative px-3" src="img/home/te3.png" alt="Title">
+            </div>
+            <div class="col-lg px-3 pe-5">
+                <h1 class="card-title fw-bold">Husna Ayoubi <h2 class="bg-primary text-light px-1">Entrepreneur</h2></h1>
+            </div>
+          </div>
+          <div class="card-body mb-4">
+            <p class="card-text h6 text-uppercase">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit.lorem with the web Exercitationem, assumenda?</p>
+          </div>
+        </div>
+      </div>  
+    </div>  
+    <!-- section tree Our Partner-->
+    <div class="container">
+      <center>
+      <h1 class="text-primary display-6 fw-bold m-5">OUR <span class="bg-primary text-white">PARTNERS</span></h1>
+      </center>
+    </div>
+    
+
     
 </body>
 </html>
