--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Hamza_Nawabi -->
     <meta charset="UTF-8">
     <link rel="stylesheet" href="bs.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
