about page completed

--- a/home.html
+++ b/home.html
@@ -338,9 +338,9 @@
                             <div class="col-lg-6">
                               <h4 class="text-light text-uppercase">join our community</h4><br>
                               <p class="text-light h5 text-uppercase" style="line-height:40px ;">Be the first to get invited to our courses & even learn about what we are up to <br>and the oppotunities to get involved</p>
-           
-                             <input type="email" class="shadow p-3" style="height:50px ;width:250px;" name="email" placeholder="Email Addrss" id="">
-                             <button class="btn btn-lg btn-outline-light mb-1">Subscribe</button><br>
+                                  
+                  <input type="email" class="shadow p-3 px-5" style="" name="email" placeholder="Email Addrss" id="">
+                  <button class="btn w-md-25 p-3 btn-lg btn-outline-light mb-1">Subscribe</button><br>
                              <div class="row">
                                 <div class="col mt-4">
                                   <a href="#"class="bg-light ps-2 pb-2 shadow p-1 me-2 rounded-pill">
