--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
            <a class="navbar-brand active" href="#">
             <img src="img/home/StartupistanLogo.png" class=" ms-md-5 m-1" style="height:60px;" alt="">
            </a>
-            <button class="navbar-toggler navbar-toggler-md " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
-               aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon" ><span>
+            <button class="navbar-toggler navbar-toggler-md " type="button" data-bs-toggle="collapse" data-bs-target="#navabout" 
+               aria-controls="navabout" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon bg-primary"><span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end p-3 fw-bold fs-6" id="navbarNavAltMarkup">
+            <div class="collapse navbar-collapse justify-content-end p-3 fw-bold fs-6" id="navabout">
              <div class="navbar-nav">
               <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="about.html">ABOUT</a>
               <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="#">EVENTS</a>
