event page finished

--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
     <!-- Navbar section -->
     <nav class="navbar navbar-expand-md" style="background-color: var(--nc); ">
       <div class="container-fluid">
-         <a class="navbar-brand active" href="#">
+         <a class="navbar-brand active" href="home.html">
           <img src="img/home/StartupistanLogo.png" class=" ms-md-5 m-1" style="height:60px;" alt="">
          </a>
           <button class="navbar-toggler navbar-toggler-md " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
@@ -50,7 +50,7 @@
           <div class="collapse navbar-collapse justify-content-end p-3 fw-bold fs-6" id="navbarNavAltMarkup">
            <div class="navbar-nav">
             <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="about.html">ABOUT</a>
-            <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="#">EVENTS</a>
+            <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="events.html">EVENTS</a>
             <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="#">PROPGRAMS</a>
             <a class="nav-link m-4  text-primary mb-0 mt-1 p-2 bg-primary text-light" style="border-radius:10px ; ">APPLY NOW</a>
           </div>
