image added from web

--- a/home.html
+++ b/home.html
@@ -9,31 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <style>
-      body{
-        margin: 0;
-        padding: 0;
-      }
-      :root{
-        --bg:#efe9e3;
-        --nc:#e7e2dc;
-      }
-      @font-face {
-        font-family: new;
-        src: url();
-      }
-      a{
-        text-transform: uppercase;
-        text-decoration: none;
-        color:blanchedalmond;
-        font-size: 24px;
-      }
-      a:hover{
-     
-        text-shadow: 2px 2px 12px lightblue;
-        
-      }
-    </style>
+  <link rel="stylesheet" href="SmalStyle.css">
 </head>
 <body>
   
