--- a/about.html
+++ b/about.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Hamza_Nawabi -->
     <meta charset="UTF-8">
     <link rel="stylesheet" href="bs.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="js.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <style>
-        :root{
-        --bg:#efe9e3;
-        --nc:#e7e2dc;
-      }
-    </style>
+    <title>Home</title>
+    <link rel="stylesheet" href="SmalStyle.css">
 </head>
 <body>
-      <!-- Navbar section -->
-      <nav class="navbar navbar-expand-md" style="background-color: var(--nc); ">
-        <div class="container-fluid">
-           <a class="navbar-brand active" href="home.html">
-            <img src="img/home/StartupistanLogo.png" class=" ms-md-5 m-1" style="height:60px;" alt="">
-           </a>
-            <button class="navbar-toggler navbar-toggler-md " type="button" data-bs-toggle="collapse" data-bs-target="#navabout" 
-               aria-controls="navabout" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon bg-primary"><span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end p-3 fw-bold fs-6" id="navabout">
-             <div class="navbar-nav">
-              <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="about.html">ABOUT</a>
-              <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="events.html">EVENTS</a>
-              <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="#">PROPGRAMS</a>
-              <a class="nav-link m-4  text-primary mb-0 mt-1 p-2 bg-primary text-light" style="border-radius:10px ; ">APPLY NOW</a>
-            </div>
+  
+    <!-- Navbar section -->
+    <nav class="navbar navbar-expand-md" style="background-color: var(--nc); ">
+      <div class="container-fluid">
+         <a class="navbar-brand active" href="home.html">
+          <img src="img/home/StartupistanLogo.png" class=" ms-md-5 m-1" style="height:60px;" alt="">
+         </a>
+          <button class="navbar-toggler navbar-toggler-md " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
+             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon" ><span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end p-3 fw-bold fs-6" id="navbarNavAltMarkup">
+           <div class="navbar-nav">
+            <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="about.html">ABOUT</a>
+            <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="events.html">EVENTS</a>
+            <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="#">PROPGRAMS</a>
+            <a class="nav-link m-4  text-primary mb-0 mt-1 p-2 bg-primary text-light" style="border-radius:10px ; ">APPLY NOW</a>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
+
+    
       <!-- section one About Us -->
       <div class="container-md px-5" style="margin-top:100px;">
         <div class="row">
