--- a/programs.html
+++ b/programs.html
@@ -28,7 +28,7 @@
             <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="about.html">ABOUT</a>
             <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="events.html">EVENTS</a>
             <a class="nav-link m-4  text-primary mb-0 mt-1 p-2" href="programs.html">PROPGRAMS</a>
-            <a class="nav-link m-4  text-primary mb-0 mt-1 p-2 bg-primary text-light" style="border-radius:10px ; ">APPLY NOW</a>
+            <a class="nav-link m-4  text-primary mb-0 mt-1 p-2 bg-primary text-light" href="apply.index" style="border-radius:10px ; ">APPLY NOW</a>
           </div>
         </div>
       </div>
