update apply now

--- a/apply.html
+++ b/apply.html
@@ -127,7 +127,7 @@
                   <button class="form-control p-3 text-uppercase fw-bold btn btn-primary w-50">Apply Now</button></div>
                </div>
             </div>
-            <div class="col-4 d-flex justify-content-start align-items-end ">
+            <div class="col-md-4 d-flex justify-content-center align-items-end ">
                 <img src="img/applynow/Screenshot 2022-09-01 at 15-14-55 Apply Now — Startupistan - Digital Skills Academy.png" alt="">
             </div>
         </div>
@@ -185,7 +185,7 @@
            <h5>IMPRINT-DISCLAIMER-PRIVACY POLICY</h5>
              <h5>© Hamza_Nawabi </h5>
          </center>
-         </div>
+         </div>     
  </div>
    
   
