update home responsive comment and another

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                 <polygon class="st3" points="1165.1,693.1 1163.8,707.8 1140.7,702.3 1127.3,728 1127.3,639.5 "></polygon>
                 </svg>
                 </div></div>
-                <p class="my-5 text-primary">We are social entrepreneurs, scattered across Europe and Afghanistan 
+                <p class="mt-5 text-primary">We are social entrepreneurs, scattered across Europe and Afghanistan  <br>
                     - united by our mission to promote empowerment through digital education for youth around the world.</p>
                     <p class="my-3 text-primary fw-bold">It’s about harnessing the transformative power of education! </p>
                     <p class="my-3 text-primary ">We don’t just teach technical skills <br>
@@ -81,7 +81,7 @@
                     <p class="my-3 text-primary ">Startupistan nurtures analytical thinking, open-mindedness,
                          resilience and adaptability and from there, we grow <br> together.</p>
         </div>
-      </div><br><br><br>
+      </div><br><br>
       <!-- section Two our mission -->
       <div class="sectiontree pt-5"style="background-color: var(--bg);">
       <div class="container-md pb-md-5" >
