update and solved some problem

--- a/about.html
+++ b/about.html
@@ -202,9 +202,9 @@
             <div class="col-sm-4 col-md-3 m-4 m-md-0">
                 <div class="row">
                     <div class="col-lg-12 rounded-circle border-4 border-primary">
-                        <img src="img/about/Paddy-Hall.png" alt="Isabelle D’Aran" class="rounded-circle h-75 w-100 border border-4 border-primary" alt="">
+                        <img src="img/about/img_avatar1.png" alt="Isabelle D’Aran" class="rounded-circle  w-100 border border-4 border-primary" alt="">
                     </div>
-                    <div class="col-lg-12 pt-3 pt-md-0" style="margin-top:-50px;">
+                    <div class="col-lg-12 pt-3 " >
                         <center>
                         <h4 class="text-primary fw-bold">Isabelle <span class="bg-primary text-light px-1">D’Aran</span> </h4>
                         <h5 class="fw-bold">Communications & Public Relations Manager </h5>
@@ -236,9 +236,9 @@
     <div class="col-sm-4 col-md-3 m-4 m-md-0">
         <div class="row">
             <div class="col-lg-12 rounded-circle border-4 border-primary">
-                <img src="img/about/Paddy-Hall.png" class="rounded-circle h-75 w-100 border border-4 border-primary" alt="">
+                <img src="img/about/img_avatar1.png" class="rounded-circle  w-100 border border-4 border-primary" alt="">
             </div>
-            <div class="col-lg-12 pt-3 pt-md-0" style="margin-top:-30px;">
+            <div class="col-lg-12 pt-4 ">
                 <center>
                 <h4 class="text-primary fw-bold">Abdullah <span class="bg-primary text-light">Halimee</span> </h4>
                 <h5 class="fw-bold">In-Country Strategic Partnership Manager </h5>
@@ -250,9 +250,9 @@
     <div class="col-sm-4 col-md-3 m-4 m-md-0">
         <di class="row">
             <div class="col-lg-12 rounded-circle border-4 border-primary">
-                <img src="img/about/Sara-Shokravi.png" class="rounded-circle h-75 w-100 border border-4 border-primary" alt="">
+                <img src="img/about/img_avatar1.png" class="rounded-circle  w-100 border border-4 border-primary" alt="">
             </div>
-            <div class="col-lg-12 pt-3 pt-md-0" style="margin-top:-30px;">
+            <div class="col-lg-12 pt-4">
                 <center>
                 <h4 class="text-primary fw-bold">Ismail <span class="bg-primary text-light px-1">Safwat</span> </h4>
                 <h5 class="fw-bold">In-Country Communications Associate </h5>
