--- a/apply.html
+++ b/apply.html
@@ -35,7 +35,7 @@
     </nav>
     <!-- Apply Section  -->
 
-    <div class="container-md my-5 p-3">
+    <div class="container-md my-md-5">
         <div class="row">
             <div class="col"></div>
             <div class="col-md-7 py-5 " style="background-color: #e6e1db;">
@@ -48,17 +48,17 @@
                 <div class="row px-5">
                     <div class="col-sm">
                         <label for="name" class="form-label text-primary">First Name</label>
-                        <input type="text" class="form-control bg-primary">
+                        <input type="text" class="form-control bg-primary" value="Hamza">
                     </div>
                     <div class="col-sm">
-                        <label for="name" class="form-label text-primary">First Name</label>
-                        <input type="text" class="form-control bg-primary">
+                        <label for="name" class="form-label text-primary" >Last Name</label>
+                        <input type="text" class="form-control bg-primary" value="Nawabi">
                     </div>
                 </div>
              
                     <div class="px-5">
-                         <label for="email" class="text-primary py-2">Email*</label>
-                        <input type="email" class="form-control bg-primary ">
+                         <label for="email" class="text-primary py-2 fw-bold" >Email*</label>
+                        <input type="email" class="form-control bg-primary " value="H.Nawabi007@gmail.com">
                     </div>
                     <div class="px-5">
                         <label for="phone-number" class="text-primary py-2">Phone Number*</label>
