--- a/events.html
+++ b/events.html
@@ -18,12 +18,13 @@
    
     <nav class="navbar navbar-expand-md" style="background-color: var(--bg); ">
       <div class="container-fluid">
-         <a class="navbar-brand active" href="#">
+         <a class="navbar-brand active" href="index.html">
           <img src="img/home/StartupistanLogo.png" class=" ms-md-5 m-1 me-0 " style="height: 50px;"  alt="">
          </a>
           <button class="navbar-toggler navbar-toggler-md " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon" ><span>
+            <span class="navbar-toggler-icon" >
+              <!-- <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-justify" viewBox="0 0 16 16"> <path fill-rule="evenodd"   d="M2 12.5a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/> </svg><span> -->
           </button>
           <div class="collapse navbar-collapse justify-content-end p-3 fw-bold fs-6" id="navbarNavAltMarkup">
            <div class="navbar-nav">
@@ -40,7 +41,7 @@
   
     
     <!-- Section First Home page  -->
-    <div class="home pt-5"style="background-image: url('img/events/Screenshot\ 2022-08-30\ at\ 05-55-11\ Events\ —\ Startupistan\ -\ Digital\ Skills\ Academy.png');background-repeat: no-repeat; background-position: center;">
+    <div class="home pt-5"style="margin-top:-20px;background-image: url('img/events/Screenshot\ 2022-08-30\ at\ 05-55-11\ Events\ —\ Startupistan\ -\ Digital\ Skills\ Academy.png');background-repeat: no-repeat; background-position: center; object-fit:cover;">
       <div class="container" >
             <div class="row" >
               <div class="col-sm-5 p-5 mb-5">
